--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -157,11 +157,11 @@
                         <div class="form-group d-flex">
                             <select id="createAddress" class="form-control">
                                 <option value="default" selected="selected">地區</option>
-                                <option value="臺北市">臺北市</option>
+                                <option value="台北市">台北市</option>
                                 <option value="新北市">新北市</option>
                                 <option value="桃園市">桃園市</option>
-                                <option value="臺中市">臺中市</option>
-                                <option value="臺南市">臺南市</option>
+                                <option value="台中市">台中市</option>
+                                <option value="台南市">台南市</option>
                                 <option value="高雄市">高雄市</option>
                                 <option value="基隆市">基隆市</option>
                                 <option value="新竹市">新竹市</option>
@@ -175,7 +175,7 @@
                                 <option value="屏東縣">屏東縣</option>
                                 <option value="宜蘭縣">宜蘭縣</option>
                                 <option value="花蓮縣">花蓮縣</option>
-                                <option value="臺東縣">臺東縣</option>
+                                <option value="台東縣">台東縣</option>
                                 <option value="澎湖縣">澎湖縣</option>
                             </select>
                         </div>
@@ -295,7 +295,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <button id="missingBtn" onclick="publishMissingAnimal()"
-                                    class="form-control btn btn-primary py-1 px-4">協尋資料送出
+                                    class="form-control btn btn-primary py-1 px-4">送出
                             </button>
                         </div>
                     </div>
